# algorithm

./: .gitignore  pyproject.toml
adapters/: embedding.ipynb
bind/: calculator.cpp  pointer.cpp
c++/: algorithmsLibrary.cpp  ascendingPrinte.cpp  binarySearch.cpp  exception.cpp  permutations.cpp
llama/: 3_1_8b.ipynb
math/: 3dvector.ipynb  deriative.ipynb
modules/include/: rectangle.cpp  rectangle.h
modules/src/: main.cpp
sort/: bubble_sort.py  merge_sort.py  selection_sort.py
