[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["김성동 <sdkim@didim365.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
sympy = "^1.13.3"
openai = "^1.47.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
