[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["김성동 <sdkim@didim365.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
sympy = "^1.13.3"
openai = "^1.47.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
transformers = "<4.44.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
einops = "^0.8.0"
adapters = "^1.0.0"
pybind11 = "^2.13.6"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
